src/objects/Apttus_Config2__AppliedRuleInfo__c.object
<CustomObject>
    <description>Keeps track of rules applied to a configuration</description>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <description>Reference to the configuration record to which the rule is applied.</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Applied Rule Infos</relationshipLabel>
        <relationshipName>Applied_Rule_Infos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constraint Rule</label>
        <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
        <relationshipLabel>Applied Rule Infos</relationshipLabel>
        <relationshipName>AppliedRuleInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaFields__c</fullName>
        <description>List of fields used in criteria filter</description>
        <label>Criteria Fields</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasCriteriaInCondition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When any of the rule condition has criteria</description>
        <label>Has Criteria In Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the rule is invalid.</description>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsSourceLineRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this rule is satisfied by a specific line item. When this field value is true the source line number must have a value.</description>
        <label>Is Source Line Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Match in location is set to true when any of the rule condition has match in location.</description>
        <label>Match In Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NeedProcessing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the rule require processing.</description>
        <label>Need Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimaryLineNumber__c</fullName>
        <description>The Primary Line Number of the product or option that is part of the product scope.</description>
        <inlineHelpText>The Primary Line Number of the product or option that is part of the product scope.</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceLineNumber__c</fullName>
        <description>Identifies the Line Item that satisfies the rule.</description>
        <label>Source Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__WasFinalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keeps track of reaching the finalized stage</description>
        <label>Was Finalized</label>
        <type>Checkbox</type>
    </fields>
    <label>Applied Rule Info</label>
    <nameField>
        <label>Applied Rule Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Rule Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>